<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilaActivity" >

    <Button
        android:id="@+id/pq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/fl_pequena" />

    <Button
        android:id="@+id/me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pq"
        android:layout_below="@+id/pq"
        android:layout_marginTop="43dp"
        android:text="@string/fl_media" />

    <Button
        android:id="@+id/gr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/me"
        android:layout_below="@+id/me"
        android:layout_marginTop="62dp"
        android:text="@string/fl_grande" />

</RelativeLayout>